# forced-init-global

./: CMakeLists.txt  README.md
include/: client_a.h  client_b.h  global.h
src/: client_a.cpp  client_b.cpp  client_main.cpp  global.cpp
